@@ -1,3 +1,8 @@
+2008-10-24  Ulrich Drepper  <drepper@redhat.com>
+
+	* resolv/res_query.c (__libc_res_nquery): Add a few casts.
+	Fix tests for existence of second reply.
+
 2008-10-23  Ulrich Drepper  <drepper@redhat.com>
 
 	* po/id.po: New file.
